--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="panel">
         <div class="pricing-plan">
-            <img src="C:\PricingPanel\PriceTableStarter\icons\icon1.png" alt="" class="pricing-img">
+            <img src="icon1.png" alt="" class="pricing-img">
             <h2 class="pricing-header">Personal</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Custom Domain</li>
@@ -23,7 +23,7 @@
             <a href="#/" class="pricing-button">Sign up</a>
         </div>
         <div class="pricing-plan">
-            <img src="C:\PricingPanel\PriceTableStarter\icons\icon2.png" alt="" class="pricing-img">
+            <img src="icon2.png" alt="" class="pricing-img">
             <h2 class="pricing-header">Small team</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Never sleeps</li>
@@ -33,7 +33,7 @@
             <a href="#/" class="pricing-button is-featured">Free trial</a>
         </div>
         <div class="pricing-plan">
-            <img src="C:\PricingPanel\PriceTable\icons\icon3.png" alt="" class="pricing-img">
+            <img src="icon3.png" alt="" class="pricing-img">
             <h2 class="pricing-header">Enterprise</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Dedicated</li>
